# sketchbook

./: .gitignore  convert-wp-to-frog.rkt  download-gist.sh  sketchbook.sublime-project
awk/: relex-to-graphviz.awk
bettercap/: needler.go  start-gatekeeper.cap  start-needler.cap  start-recon.cap  stop-gatekeeper.cap  stop-needler.cap  stop-recon.cap
c++/aws-sandbox/: CMakeLists.txt  main.cpp
cloudformation/: asg-with-ebs.json
godot/: .gitignore
haproxy/: echo-port.rkt  echo.rkt  haproxy.cfg  restart.sh
java/: pom.xml
jq/: ace.jq  fs.jq
js/: google-form-confirmation-email.js
python/: cron.py  dnsmasq-hosts-update.py  dnsmasq-update.py  download-stuff.py  ffvideo-test.py  generate-bulk-upload.py  generate-processing-request.py  generate-search-entries.py  group-sites-by-bastion.py  hachoir-metadata-test.py  img-thumbnail.py  list-of-ips-to-cidrs.py  new-rows-in-csv.py  pyexiftool.py  python-test.py  queue-ff.py  queue-single-ff-to-gx.py  queue-single-ff.py  queue-single-publish.py  queue-single-tr.py  queue-tr.py  recognize-images.py  remove-birth-and-residence-facts-from-non-principals.py  rule-diff.py  sample-groups-from-group-list.py  sample-images-from-group-list.py  sandbox.py  subprocess-ffmpeg.py  trace-swf-identity.py  trim-rule-transductions.py
racket/: 189-easy-hangman.rkt  convert-to-haproxy-fleet-name-prefix.rkt  convert-to-haproxy-resolvers.rkt  convert-to-haproxy-server-template.rkt  delete-old-fleets.rkt  dissolving-block.rkt  dtm-load-test.rkt  filter-cfn-stack-list.rkt  generate-sublime-project.rkt  graph-test.rkt  lambda-calculus.rkt  latest-mvn-versions.rkt  monopoly.rkt  mysql-with-json-data.rkt  paas-portal.rkt  postgres-with-json-data.rkt  pythagorean-means.rkt  quadtree.rkt  roman-numerals.rkt  static-file-server.rkt  test-report-launcher.rkt
ruby/: connect-to-splunk.rb
rust/confluence_cli/: Cargo.toml
rust/confluence_cli/src/: main.rs
rust/fs-date/: Cargo.toml
rust/fs-date/src/: main.rs
rust/fs-image-downloader/: Cargo.toml
rust/fs-image-downloader/src/: main.rs
shell/: backup-plex-metadata.sh  check-fcc-license.sh  check-github-connectivity.sh  clean-all.sh  clone-fs-eng.sh  clone-fs-webdev.sh  clone-work-repo.sh  compare-blueprints.sh  compare-scores.sh  compare-video-frames.sh  copy-password.sh  copy-session.sh  count-exit-codes.sh  curl-dtm.sh  (+18 more)
(+268 files in other folders)
