[package]
name = "confluence_cli"
version = "0.1.0"
authors = ["Ben Draut <drautb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
base64 = "0.11.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
