[package]
name = "fs-date"
version = "0.1.0"
authors = ["Ben Draut <drautb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
futures = "0.3.15"
tokio = { version = "1.6.0", features = ["full"] }
structopt = "0.3.21"
