[package]
name = "fs-image-downloader"
version = "0.1.0"
authors = ["Ben Draut <drautb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
num_cpus = "1.13.1"
spmc = "0.3.0"
lazy_static = "1.4.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["blocking", "json" ] }
